fix table header spacing

--- a/theme/assets/blocks/src/wpcloud-site-template.css
+++ b/theme/assets/blocks/src/wpcloud-site-template.css
@@ -29,7 +29,7 @@
 	tr {
 		vertical-align: middle;
 
-		td:first-child, th {
+		td:first-child, th:first-child {
 			padding-left: 0.5rem;
 		}
 		&:not(thead tr):hover {
